--- a/sovtech-rickyconn/src/App.css
+++ b/sovtech-rickyconn/src/App.css
@@ -1,4 +1,7 @@
 .App {
   text-align: center;
+}
+
+.background-color {
   background: url(https://i.pinimg.com/originals/ce/33/72/ce33721232fb5e0939a4b6a72b4aeef1.jpg);
 }
