Added styling to display h1 and make a tags look like normal text

--- a/sovtech-rickyconn/src/App.css
+++ b/sovtech-rickyconn/src/App.css
@@ -6,3 +6,11 @@
 .background-color {
   background: url(https://i.pinimg.com/originals/ce/33/72/ce33721232fb5e0939a4b6a72b4aeef1.jpg);
 }
+
+h1{
+  color: white
+}
+
+a{
+  text-decoration: none;
+}
